--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 
 
 
-<title>RMarkdown Website by Irais Luquis</title>
+<title>About me</title>
 
 <script src="site_libs/header-attrs-2.19/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
@@ -32,8 +32,6 @@
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
 <link href="site_libs/highlightjs-9.12.0/textmate.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
-<link href="site_libs/font-awesome-5.1.0/css/all.css" rel="stylesheet" />
-<link href="site_libs/font-awesome-5.1.0/css/v4-shims.css" rel="stylesheet" />
 
 <style type="text/css">
   code{white-space: pre-wrap;}
@@ -297,19 +295,14 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">RMarkdown Website by Irais Luquis</h1>
+<h1 class="title toc-ignore">About me</h1>
 
 </div>
 
 
-<p>This is a website for academic science to publicly share my code and
-science.</p>
-<div id="hi-there-i-am-irais-luquis" class="section level2">
-<h2>Hi there, I am Irais Luquis!</h2>
-<p><img src="GOPR0344.jpg" width="100%" /></p>
-<p>I am currently working on my master’s degree on marine sciences at
-the University of Puerto Rico, Mayagüez Campus.</p>
-<p><a href="about.html">Read more about me…</a></p>
+<div id="header" class="section level2">
+<h2>Header</h2>
+<p>Say more about you here.</p>
 </div>
 
 
