--- a/about.html
+++ b/about.html
@@ -310,7 +310,7 @@ marine scientist student, I want to address issues of concern to
 regulate major problems affecting the marine ecosystem of Puerto
 Rico.</p>
 <p>You can find me on <a
-href="www.github.com/iraisluquis">GitHub.</a></p>
+href="http://www.github.com/iraisluquis">GitHub.</a></p>
 </div>
 <div id="master-project" class="section level2">
 <h2>Master project</h2>
