--- a/cv.html
+++ b/cv.html
@@ -302,11 +302,10 @@ $(document).ready(function () {
 </div>
 
 
-<p><a href="CV.pdf#" class="download" title="Download CV as PDF">Download
+<div id="click-link-to-download-cv." class="section level2">
+<h2>Click link to download CV.</h2>
+<p><a href="Irais Luquis-Ramos CVs.pdf#" class="download" title="Download CV as PDF">Download
 CV</a></p>
-<div id="header" class="section level2">
-<h2>Header</h2>
-<p>Say more about your CV here.</p>
 </div>
 
 
