--- a/contact.html
+++ b/contact.html
@@ -300,9 +300,11 @@ $(document).ready(function () {
 </div>
 
 
-<div id="header" class="section level2">
-<h2>Header</h2>
-<p>Say more about you here.</p>
+<div id="contact-information-for-further-questions"
+class="section level2">
+<h2>Contact information for further questions</h2>
+<p><a href="mailto:irais.luquis@upr.edu"
+class="email">irais.luquis@upr.edu</a></p>
 </div>
 
 
